Fixed logo and column alignment (#321)
updated logo and column alignment. Did some tweaking with run/carat

--- a/app/styles/frame.css
+++ b/app/styles/frame.css
@@ -119,6 +119,10 @@
   padding: 10px 30px 0 0;
 }
 
+.brand img{
+  height: 30px;
+}
+
 .brand span{
   font-size:12px;
   line-height: 14px;
