--- a/app/styles/test.css
+++ b/app/styles/test.css
@@ -56,10 +56,6 @@
 	 left: 15px;
 }*/
 
-.accordian{
-	padding-right: 10px;
-}
-
 .empty__state{
   height: 100%;
 	text-align: center;
@@ -132,6 +128,7 @@
 	transition: background-color 1s ease-in-out;
 }
 
+
 .test__profile:focus,
 .test__profile.focus {
 	outline:none;
@@ -146,11 +143,15 @@
 }
 
 .test__btns{
-	float: right !important;
+      display: flex;
+  align-items: center;
+  justify-content: space-between !important;
+    
 }
 
-.test__btns > .btn-group{
-	float: right !important;
+.accordian{
+	padding: 0px 10px;
+    
 }
 
 
